Implemented random names generator.

--- a/views/debug.html
+++ b/views/debug.html
@@ -1,6 +1,7 @@
 ﻿<link rel="stylesheet" type="text/css" href="/content/styles/debug.css"/>
 
 <div id="application">
+    <button id="randomize-names">Randomize Names</button>
     <button id="submit">Submit</button>
     <button id="clear">Clear</button>
     <button id="clear-match">Clear Match</button>
