Display references as links with highlight support.

--- a/views/debug.html
+++ b/views/debug.html
@@ -25,7 +25,7 @@
     <tr id="member-row-{id}">
         <td>{id}</td>
         <td class="name"><span class="member-name">{name}</span></td>
-        <td class="references">{references}</td>
+        <td class="references">{referenceLinks}</td>
         <td class="match">{match}</td>
         <td class="state" data-state="{state}">{selectionIndicator}</td>
     </tr>
