--- a/content/styles/debug.less
+++ b/content/styles/debug.less
@@ -26,6 +26,10 @@
         background-color: #fa8072;
       }
 
+      &.highlighted {
+        background-color: #c0c0c0;
+      }
+
       &.has-match {
         background-color: #0ed672;
         
